--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@tailwindcss/vite": "^4.1.17",
 		"astro": "^5.14.4",
 		"astro-icon": "^1.1.0",
+		"astro-loading-indicator": "^0.7.1",
 		"dayjs": "^1.11.13",
 		"mdast-util-to-string": "^4.0.0",
 		"medium-zoom": "^1.1.0",
