--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,4 +1,4 @@
 {
-	"recommendations": ["astro-build.astro-vscode", "unifiedjs.vscode-mdx", "christian-kohler.path-intellisense", "prettier.prettier-vscode"],
+	"recommendations": ["astro-build.astro-vscode", "unifiedjs.vscode-mdx", "christian-kohler.path-intellisense", "esbenp.prettier-vscode"],
 	"unwantedRecommendations": []
 }
